add new block case

--- a/src/partials/dev-before-footer.html
+++ b/src/partials/dev-before-footer.html
@@ -1,7 +1,8 @@
 <section class="dev-before-footer">
-  <div class="dev-before-footer-img">
+  <picture class="dev-before-footer-img">
+    <source srcset="../img/mobile-footer-bg.webp" media="(max-width: 640px)" />
     <img src="../img/before-footer-img.webp" alt="" />
-  </div>
+  </picture>
 
   <div class="container">
     <div class="dev-before-footer-form">
