--- a/src/partials/dev-cases.html
+++ b/src/partials/dev-cases.html
@@ -38,6 +38,38 @@
         <div class="dev-case-title">
           Корпоративный сайт для завода производителя
         </div>
+
+        <div class="dev-case-item-back">
+          <div class="image">
+            <img src="../img/cases/polygal-black.webp" alt="" />
+          </div>
+          <div class="content">
+            <div class="logo">
+              <img src="../img/polygal-logo.webp" alt="" />
+            </div>
+            <div class="actions">
+              <div class="action"><span>стоимость</span> от 300 тыс.руб</div>
+              <div class="action">
+                <img src="../img/wp.webp" alt="" />
+                WordPress
+              </div>
+              <div class="action">
+                <span>срок выполнения:</span>
+                3 месяца
+              </div>
+            </div>
+            <p>
+              Создание корпоративного сайта для производства сотовых
+              поликарбонатных плит в мире, лидера отрасли в конструировании,
+              производстве и инновационных разработках структурных
+              поликарбонатных плит
+            </p>
+
+            <button type="button" class="btn-reset dev-btn--accent">
+              Смотреть кейс
+            </button>
+          </div>
+        </div>
       </div>
       <div class="dev-case-item">
         <a class="dev-case-link" href=""></a>
@@ -87,6 +119,7 @@
   <div class="container">
     <div class="dev-cases-description">
       <picture class="dev-cases-description-bg">
+        <source srcset="../img/code-bg-mobile.svg" media="(max-width: 640px)" />
         <img src="../img/code-bg.webp" alt="" />
       </picture>
       <div class="subtitle">
