--- a/src/partials/dev-trusted.html
+++ b/src/partials/dev-trusted.html
@@ -25,6 +25,9 @@
       data-trusted-bg="4"
     />
   </div>
+  <div class="dev-trusted-bg-mobile">
+    <img src="../img/trusted-bg-mobile.webp" alt="" />
+  </div>
   <div class="container">
     <h2 class="dev-title dev-trusted-title">
       9 причин <span>Доверить нам</span> создание сайта
