--- a/src/scss/components/_dev-order.scss
+++ b/src/scss/components/_dev-order.scss
@@ -119,6 +119,10 @@
           max-width: 100%;
           width: 100%;
           display: none;
+
+          &.active {
+            display: block;
+          }
         }
       }
     }
