--- a/src/scss/components/_dev-problems.scss
+++ b/src/scss/components/_dev-problems.scss
@@ -123,11 +123,11 @@
     position: relative;
     z-index: 4;
     @media (max-width: 640px) {
-      background: url("../../img/form-mask-mobile.svg") no-repeat;
-      background-size: contain;
-      background-position: 50%;
-      padding: 80px 80px 80px 80px;
-      height: 750px;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(20px);
+      padding: 20px 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px var(--yellow);
     }
     .dev-problems-form-title {
       font-family: var(--font-family);
@@ -185,6 +185,9 @@
     @media (max-width: 1440px) {
       max-width: 700px;
       bottom: -200px;
+    }
+    @media (max-width: 640px) {
+      display: none;
     }
   }
 
