--- a/src/scss/components/_dev-cases.scss
+++ b/src/scss/components/_dev-cases.scss
@@ -83,6 +83,90 @@
       color: var(--white);
       max-width: 480px;
     }
+
+    .dev-case-item-back {
+      position: absolute;
+      inset: 0;
+      display: flex;
+      flex-direction: column;
+      z-index: 2;
+      height: 100%;
+      opacity: 0;
+      visibility: hidden;
+      transition: 0.3s ease;
+
+      .image {
+        position: absolute;
+        inset: 0;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+        }
+      }
+      .logo {
+        max-width: 150px;
+        display: block;
+        margin-bottom: 10px;
+      }
+
+      .actions {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+
+        .action {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 5px;
+          font-family: var(--font-family);
+          font-weight: 600;
+          font-size: clamp(18px, 2vw, 20px);
+          line-height: 120%;
+          color: var(--white);
+          border: 1px solid rgba(255, 255, 255, 0.4);
+          border-radius: 60px;
+          padding: 8px 24px;
+          max-width: fit-content;
+
+          span {
+            font-family: var(--font-family);
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 120%;
+            color: var(--white);
+          }
+        }
+      }
+      p {
+        color: var(--white);
+        font-size: 16px;
+        margin-bottom: 50px;
+      }
+      .content {
+        position: absolute;
+        z-index: 3;
+        top: 60px;
+        left: 60px;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        max-width: 650px;
+      }
+      .dev-btn--accent {
+        max-width: 250px;
+      }
+    }
+    @include hover {
+      &:hover {
+        .dev-case-item-back {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
   }
 
   .dev-cases-description {
@@ -103,7 +187,7 @@
     .subtitle {
       font-family: var(--font-family);
       font-weight: 700;
-      @include r-font(36, 24);
+      @include r-font(36, 20);
       line-height: 130%;
       text-transform: uppercase;
       color: var(--white);
@@ -119,6 +203,9 @@
       @media (min-width: 767px) {
         max-width: 300px;
       }
+    }
+    @media (max-width: 640px) {
+      padding: 40px 65px 30px 65px;
     }
   }
 }
