--- a/src/scss/components/_dev-dev.scss
+++ b/src/scss/components/_dev-dev.scss
@@ -3,7 +3,9 @@
   height: 1260px;
   padding-block: 120px;
   margin-bottom: 120px;
-
+  @media (max-width: 640px) {
+    height: 960px;
+  }
   &-title {
     text-align: left;
     margin: 0;
@@ -17,6 +19,9 @@
     .dev-title {
       text-align: center;
       margin-bottom: 200px;
+      @media (max-width: 640px) {
+        margin-bottom: 60px;
+      }
     }
 
     .dev-info {
@@ -26,10 +31,15 @@
       max-width: 430px;
       background: url("../../img/bg-dev-text.webp") no-repeat;
       background-size: contain;
+      @media (max-width: 640px) {
+        background: rgba(245, 245, 245, 0.2);
+        box-shadow: 0 6px 16px 0 rgba(255, 209, 48, 0.4);
+        padding: 20px 10px;
+      }
       .dev-info-subtitle {
         font-family: var(--font-family);
         font-weight: 700;
-        font-size: 36px;
+        font-size: clamp(24px, 2.5vw, 36px);
         line-height: 120%;
         text-transform: uppercase;
         color: var(--yellow);
@@ -38,7 +48,7 @@
       .dev-info-desc {
         font-family: var(--font-family);
         font-weight: 400;
-        font-size: 20px;
+        font-size: clamp(14px, 2vw, 20px);
         line-height: 130%;
         color: var(--white);
         margin-bottom: 14px;
@@ -91,11 +101,15 @@
       padding: 60px;
       border-radius: 10px;
       box-shadow: 5px 0px 25px var(--yellow);
+      @media (max-width: 640px) {
+        grid-template-columns: 1fr;
+        padding: 20px;
+      }
     }
     .left {
       font-family: var(--font-family);
       font-weight: 700;
-      font-size: 36px;
+      @include r-font(36, 24);
       line-height: 120%;
       text-transform: uppercase;
       color: var(--white);
