--- a/src/scss/components/_dev-team.scss
+++ b/src/scss/components/_dev-team.scss
@@ -1,6 +1,9 @@
 .dev-team {
   position: relative;
   padding-block: 100px;
+  @media (max-width: 640px) {
+    padding-block: 20px;
+  }
   .dev-team-bg {
     position: absolute;
     inset: 0;
@@ -32,7 +35,9 @@
     display: flex;
     flex-direction: column;
     height: auto;
-
+    .img img {
+      width: 100%;
+    }
     .name {
       font-family: var(--font-family);
       font-weight: 700;
@@ -62,6 +67,11 @@
       @media (max-width: 1560px) {
         padding-block: 15vw;
       }
+      @media (max-width: 640px) {
+        background: none;
+        padding-top: 30px;
+        padding-bottom: 0;
+      }
     }
     .wrapper-content {
       display: flex;
@@ -72,7 +82,7 @@
     .subtitle {
       font-family: var(--font-family);
       font-weight: 700;
-      font-size: 36px;
+      @include r-font(36, 24);
       line-height: 120%;
       text-transform: uppercase;
       color: var(--white);
@@ -83,6 +93,10 @@
     }
     p {
       margin-bottom: 10px;
+      @media (max-width: 640px) {
+        font-size: 14px;
+        line-height: 120%;
+      }
     }
   }
 
