--- a/src/scss/components/_dev-trusted.scss
+++ b/src/scss/components/_dev-trusted.scss
@@ -20,6 +20,29 @@
         display: block;
       }
     }
+
+    @media (max-width: 640px) {
+      display: none;
+    }
+  }
+
+  .dev-trusted-bg-mobile {
+    display: none;
+    @media (max-width: 640px) {
+      display: block;
+      position: absolute;
+      inset: 0;
+      z-index: 0;
+      pointer-events: none;
+      z-index: -1;
+      filter: drop-shadow(2px 4px 6px var(--yellow));
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
   }
 
   .dev-trusted-title {
@@ -33,6 +56,9 @@
     margin-top: 24vw;
     height: 465px;
     transform: translateY(50px);
+    @media (max-width: 640px) {
+      opacity: 0;
+    }
     &:before {
       content: "";
       position: absolute;
@@ -97,6 +123,9 @@
       .list {
         display: flex;
         gap: 4px;
+        @media (max-width: 640px) {
+          flex-direction: column;
+        }
       }
 
       li {
@@ -156,6 +185,9 @@
     background: url("../../img/wave-bg.svg") center / cover no-repeat;
     border-radius: 16px;
     margin-top: 10px;
+    @media (max-width: 640px) {
+      padding: 20px 10px;
+    }
     .subtitle {
       font-family: var(--font-family);
       font-weight: 400;
@@ -207,13 +239,13 @@
         .price {
           display: flex;
           align-items: center;
-          gap: 20px;
+          gap: clamp(10px, 1.5vw, 20px);
           font-family: var(--font-family);
           font-weight: 700;
           font-size: clamp(24px, 3vw, 36px);
           line-height: 120%;
           color: var(--white);
-
+          flex-wrap: wrap;
           span {
             font-family: var(--font-family);
             font-weight: 400;
